<resources>
    <string name="app_name">Fin Password</string>


    <string name="tools">Tools</string>
    <string name="recently_scan">Recently Scan</string>
    <string name="sub_total">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="store_information">Store information</string>
    <string name="customer_information">Customer information</string>
    <string name="member_discount">Member Discount</string>
    <string name="finish_pay"><![CDATA[Finish & pay]]></string>
    <string name="discount">Discount</string>
    <string name="round_up">Round Up</string>
    <string name="credit_card">Credit Card</string>
    <string name="gift_card">Gift Card</string>
    <string name="cancel">Cancel</string>
    <string name="note_cancel_payment"><![CDATA[Payments made until now will be voided and your money will be returned to the credit cards and gift cards. <br/><br/>are you sure want to revert payments ?]]></string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="modify_order">modify order</string>
    <string name="maintainance">maintainance</string>
    <string name="back_to_home">Back to Home</string>
    <string name="configuration">Configuration</string>
    <string name="lookup_orders">Lookup Orders</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="ip_address">IP Address:</string>
    <string name="search">SEARCH</string>
    <string name="port">Port:</string>
    <string name="clear">CLEAR</string>
    <string name="save">Save</string>
    <string name="are_you_test2_supro">Are You %s Supro?</string>
    <string name="note_dialog_giftcard">Scan or Enter Gift Card Number</string>
    <string name="pay">Pay</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="log_in_to_your_acc">Login into your account</string>
    <string name="user_name">Username</string>
    <string name="user_name1">Email/Username</string>

    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="create_acc">Create Account</string>
    <string name="name_company">Name/Company</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="acc">Already have an account? Log In</string>
    <string name="no_acc">Don’t Have Account? Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_here">Search here</string>
    <string name="acc_platform">Account Platform</string>
    <string name="acc_id">Account ID</string>
    <string name="street">Street</string>
    <string name="change_pwd">Change Password</string>
    <string name="change_pwd_desc">Your new password must be different  from previous used password</string>
    <string name="current_pwd">Current Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_new_pwd">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="forgot_pwd_desc">Please enter your email below to  receive your password reset instuctions.</string>
    <string name="send">Send</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="add_acc">Add Account</string>
    <string name="setting">Settings</string>
    <string name="private2">Private</string>
    <string name="family">Family</string>
    <string name="team">Team</string>
    <string name="setting1">Setting</string>
    <string name="retry">Retry</string>
    <string name="error_user_name">Please, enter user name</string>
    <string name="error_pwd">Please, enter password</string>
    <string name="logout_desc">Are you sure you want to logout?</string>
    <string name="house_no">House Number</string>
    <string name="error_name">Please enter name</string>
    <string name="error_email">Please, enter email id</string>
    <string name="error_city">Please enter city name</string>
    <string name="error_street">Please enter street name</string>
    <string name="error_house_no">Please enter house number</string>
    <string name="error_pin_code">Please enter pin code</string>
    <string name="error_confirm_pwd">Please enter confirm password</string>
    <string name="error_pwd_mismatch">Password mismatch</string>
    <string name="error_email1">Please enter valid email id</string>
    <string name="delete">Delete</string>
    <string name="no_data_found">No Data Found</string>
    <string name="action_deleted">Delete</string>
</resources>