<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_color"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.sign_up.SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingBottom="@dimen/margin_20"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_company"
                style="@style/tvSignUpStyle"
                android:text="@string/name_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_company"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginStart="@dimen/margin_38"
                android:singleLine="true"
                android:layout_marginTop="@dimen/margin_6"
                android:paddingStart="@dimen/margin_20"
                android:textCursorDrawable="@drawable/cursor_bg"
                android:layout_marginEnd="@dimen/margin_38"
                android:background="@drawable/edt_bg"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_company" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_name"
                style="@style/tvSignUpStyle"
                android:text="@string/user_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_company" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_user_name"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                style="@style/tvSignUpStyle"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                style="@style/edtLoginStyle"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_city"
                style="@style/tvSignUpStyle"
                android:text="@string/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_city"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_street"
                style="@style/tvSignUpStyle"
                android:text="@string/street"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_city" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_street"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_street" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_house_no"
                style="@style/tvSignUpStyle"
                android:text="@string/house_no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_street" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_house_no"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_house_no" />



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_postal_code"
                style="@style/tvSignUpStyle"
                android:text="@string/postal_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_house_no" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_postal_code"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_postal_code" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pwd"
                style="@style/tvSignUpStyle"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_postal_code" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_pwd"
                style="@style/edtLoginStyle"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pwd" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_confirm_pwd"
                style="@style/tvSignUpStyle"
                android:text="@string/confirm_pwd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_pwd" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_confirm_pwd"
                style="@style/edtLoginStyle"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_confirm_pwd" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/btnLoginStyle"
                android:layout_marginTop="@dimen/margin_30"
                android:text="@string/sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_confirm_pwd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_60"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/acc"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>