<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/csStyle"
    android:background="@color/white"
    tools:context=".ui.edit_profile.EditProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        style="@style/scrollViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout style="@style/csStyle">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_name"

                style="@style/tvLoginStyle"
                android:layout_marginTop="@dimen/margin_38"

                android:text="@string/user_name"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_user_name"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                style="@style/tvLoginStyle"

                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_company"
                style="@style/tvLoginStyle"

                android:text="@string/name_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_company"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_company" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_postal_code"
                style="@style/tvLoginStyle"
                android:text="@string/postal_code"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_company" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_postal_code"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_postal_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_street"
                style="@style/tvLoginStyle"

                android:text="@string/street"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/edt_postal_code" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_street"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_street" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_city"
                style="@style/tvLoginStyle"

                android:text="@string/city"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/edt_street" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_city"
                style="@style/edtLoginStyle"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_city" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                style="@style/btnLoginStyle"
                android:layout_marginTop="@dimen/margin_36"
                android:layout_marginBottom="@dimen/margin_30"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@id/edt_city" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>