<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:id="@+id/img_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_280"
        android:scaleType="fitXY"
        android:src="@drawable/login_bg1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_120"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/img_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_top">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/_60sdp"
                android:id="@+id/tv_logi_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/log_in_to_your_acc"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="38dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_name"
                style="@style/tvLoginStyle"
                android:layout_marginTop="@dimen/margin_40"
                android:text="@string/user_name1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_logi_in" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_user_name"
                style="@style/edtLoginStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password"
                style="@style/tvLoginStyle"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_pwd"
                style="@style/tvLoginStyle"
                android:layout_marginEnd="@dimen/margin_38"
                android:text="@string/forgot_password"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_user_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_pwd"
                style="@style/edtLoginStyle"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_log_in"
                style="@style/btnLoginStyle"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_pwd" />

            <ImageView
                android:layout_marginTop="@dimen/_24sdp"
                android:id="@+id/imageView2"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/ic_baseline_fingerprint_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_log_in" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/_16sdp"
                android:id="@+id/tv_no_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_30"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/no_acc"
                android:textColor="@color/app_color"
                android:textSize="@dimen/text_size_12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>