<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_26sdp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_14ssp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"

            android:background="#e7e7e7"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_marginBottom="@dimen/_26sdp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_horizontal"
            android:text="@string/logout_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_9ssp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_6sdp"

            android:background="#e7e7e7"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/app_color"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tvYes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>